--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -40,3 +40,9 @@ repos:
       - id: trailing-whitespace
       # Checks for private key files.
       - id: detect-private-key
+  # Pre-Commit Hooks for uv package management
+  - repo: https://github.com/astral-sh/uv-pre-commit
+    rev: 0.4.9
+    hooks:
+        # Update the uv lockfile
+        - id: uv-lock
