--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
 [tool.uv]
 dev-dependencies = [
     "commitizen>=3.29.0",
+    "pre-commit>=3.8.0",
     "pytest-asyncio>=0.24.0",
     "pytest>=8.3.2",
     "ruff>=0.6.4",
