--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dev-dependencies = [
     "commitizen>=3.29.0",
     "pre-commit>=3.8.0",
     "pytest-asyncio>=0.24.0",
+    "pytest-cov>=5.0.0",
     "pytest>=8.3.2",
     "ruff>=0.6.4",
 ]
