--- a/.github/workflows/continous-deployment.yaml
+++ b/.github/workflows/continous-deployment.yaml
@@ -1,9 +1,9 @@
-name: Continuous Deployment
+name: Continuous Deployment # Name of the workflow
 
-on:
+on: # Defines when the workflow should be triggered
   push:
     branches:
-      - main
+      - main # Trigger the workflow on push events to the main branch only
 
 permissions:
   contents: write
