fix(uv): fixed release increment to uv.lock file by release-please

--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -3,7 +3,8 @@
   "packages": {
     ".": {
       "extra-files": [
-        "releaseer/__init__.py"
+        "releaseer/__init__.py",
+        "uv.lock"
       ],
       "package-name": "releaseer",
       "release-type": "python"
