fix(release-please): attempt to fix uv.lock increment change by release automation bot

--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -4,7 +4,7 @@
     ".": {
       "extra-files": [
         "releaseer/__init__.py",
-        "uv.lock"
+        "./uv.lock"
       ],
       "package-name": "releaseer",
       "release-type": "python"
