--- a/.github/workflows/continous-deployment.yaml
+++ b/.github/workflows/continous-deployment.yaml
@@ -1,25 +1,58 @@
-name: Continuous Deployment # Name of the workflow
+name: Continous Deployment
 
-on: # Defines when the workflow should be triggered
+on:
   push:
-    branches:
-      - main # Trigger the workflow on push events to the main branch only
-
-permissions:
-  contents: write
-  pull-requests: write
-  packages: write
-  attestations: write
-  id-token: write
+    tags:
+      - '*'
 
 jobs:
-  deployment:
+  release-build:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Release Please Action
-        id: release-please
-        uses: googleapis/release-please-action@v4.1.1
+      - 
+        name: Checking out repository
+        uses: actions/checkout@v4
+      - 
+        name: Install uv
+        uses: astral-sh/setup-uv@v2
+      - 
+        name: Set up Python
+        run: uv python install
+      - 
+        name: Build release distributions     
+        run: uv build
+      - 
+        name: Upload distributions
+        uses: actions/upload-artifact@v4
         with:
-          release-type: python
-          manifest-file: .release-please-manifest.json
+          name: release-dists
+          path: dist/
+
+  release-publish-pypi:
+    runs-on: ubuntu-latest
+    needs:
+      - release-build
+    permissions:
+      # IMPORTANT: this permission is mandatory for trusted publishing
+      id-token: write
+    environment:
+      name: pypi
+      url: https://pypi.org/p/releaseer
+      
+    steps:
+      - 
+        name: Retrieve release distributions
+        uses: actions/download-artifact@v4
+        with:
+          name: release-dists
+          path: dist/
+      -
+        name: Publish release distributions to PyPI
+        uses: pypa/gh-action-pypi-publish@v1.10.1
+        with:
+          user: shinybrar
+          attestations: true
+          packages-dir: dist/
+          verbose: true
+      
+    
