fix(github-actions): changed continous deployment to be triggered by new release creation

--- a/.github/workflows/continous-deployment.yaml
+++ b/.github/workflows/continous-deployment.yaml
@@ -1,9 +1,9 @@
 name: Continous Deployment
 
 on:
-  push:
-    tags:
-      - '*'
+  release:
+    types:
+      - published
 
 jobs:
   release-build:
