fix(deployments): implemented a repo dispatch event

--- a/.github/workflows/continous-deployment.yaml
+++ b/.github/workflows/continous-deployment.yaml
@@ -1,9 +1,8 @@
 name: Continous Deployment
 
 on:
-  release:
-    types:
-      - published
+  repository_dispatch:
+    types: [deploy]
 
 jobs:
   release-build:
