feat(release): updated release process with attestations write permission

--- a/.github/workflows/continous-deployment.yaml
+++ b/.github/workflows/continous-deployment.yaml
@@ -34,6 +34,7 @@ jobs:
     permissions:
       # IMPORTANT: this permission is mandatory for trusted publishing
       id-token: write
+      attestations: write
     environment:
       name: pypi
       url: https://pypi.org/p/releaseer
