--- a/.github/workflows/continous-deployment.yaml
+++ b/.github/workflows/continous-deployment.yaml
@@ -48,8 +48,9 @@ jobs:
           path: dist/
       -
         name: Publish release distributions to PyPI
-        uses: pypa/gh-action-pypi-publish@v1.10.1
+        uses: pypa/gh-action-pypi-publish@v1.10.3
         with:
           attestations: true
           packages-dir: dist/
           verbose: true
+          print-hash: true
