--- a/.github/workflows/continous-deployment.yaml
+++ b/.github/workflows/continous-deployment.yaml
@@ -5,8 +5,15 @@ on:
     types: [deploy]
 
 jobs:
-  release-build:
+  pypi-release:
     runs-on: ubuntu-latest
+    permissions:
+      # IMPORTANT: this permission is mandatory for trusted publishing
+      id-token: write
+      attestations: write
+    environment:
+      name: pypi
+      url: https://pypi.org/p/releaseer
     steps:
       -
         name: Checking out repository
@@ -21,36 +28,10 @@ jobs:
         name: Build release distributions
         run: uv build
       -
-        name: Upload distributions
-        uses: actions/upload-artifact@v4
-        with:
-          name: release-dists
-          path: dist/
-
-  release-publish-pypi:
-    runs-on: ubuntu-latest
-    needs:
-      - release-build
-    permissions:
-      # IMPORTANT: this permission is mandatory for trusted publishing
-      id-token: write
-      attestations: write
-    environment:
-      name: pypi
-      url: https://pypi.org/p/releaseer
-
-    steps:
-      -
-        name: Retrieve release distributions
-        uses: actions/download-artifact@v4
-        with:
-          name: release-dists
-          path: dist/
-      -
         name: Publish release distributions to PyPI
         uses: pypa/gh-action-pypi-publish@v1.10.3
         with:
-          attestations: true
+          attestations: false
           packages-dir: dist/
           verbose: true
           print-hash: true
